Refactoring to java 25, also Checker splitting into few files, fix bugs inside

--- a/desktop-client/pom.xml
+++ b/desktop-client/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
