--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_USER: swingteacher
       POSTGRES_PASSWORD: swingteacher
     ports:
-      - "5432:5432"
+      - "5450:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U swingteacher -d swingteacher -h 127.0.0.1"]
       interval: 5s
@@ -39,5 +39,14 @@ services:
       SWINGTEACHER_DB_USER: swingteacher
       SWINGTEACHER_DB_PASSWORD: swingteacher
       SWINGTEACHER_SERVICE_PORT: 8080
+      SPRING_PROFILES_ACTIVE: docker
+      AUTH_SERVICE_BASE_URL: http://auth-service:8100
+      USER_SERVICE_BASE_URL: http://user-service:8095
+    networks:
+      - default
+
+networks:
+  default:
+    name: swingteacher-network
 
 
