--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,18 +35,21 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SWINGTEACHER_DB_URL: jdbc:postgresql://db:5432/swingteacher
-      SWINGTEACHER_DB_USER: swingteacher
-      SWINGTEACHER_DB_PASSWORD: swingteacher
+      SWINGTEACHER_DATABASE_URL: jdbc:postgresql://db:5432/swingteacher
+      SWINGTEACHER_DATABASE_USER: swingteacher
+      SWINGTEACHER_DATABASE_PASSWORD: swingteacher
       SWINGTEACHER_SERVICE_PORT: 8080
       SPRING_PROFILES_ACTIVE: docker
       AUTH_SERVICE_BASE_URL: http://auth-service:8100
       USER_SERVICE_BASE_URL: http://user-service:8095
     networks:
       - default
+      - observability-stack-network
 
 networks:
   default:
     name: swingteacher-network
+  observability-stack-network:
+    external: true
 
 
