--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,23 @@ services:
       - default
       - observability-stack-network
 
+  website:
+    build:
+      context: ./website
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    environment:
+      - NODE_ENV=production
+    healthcheck:
+      test: [ "CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    networks:
+      - default
+
 networks:
   default:
     name: swingteacher-network
