--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -76,7 +76,8 @@ jobs:
       - name: Build installers and portable app image (Windows)
         if: matrix.os == 'windows-latest'
         run: |
-          cd desktop-client
+          subst X: $env:GITHUB_WORKSPACE
+          cd X:\desktop-client
           $MAVEN_VERSION = mvn help:evaluate -Dexpression=project.version -q -DforceStdout
           $APP_VERSION = $MAVEN_VERSION -replace "-SNAPSHOT", "" -replace "-.*", ""
           if ($APP_VERSION -notmatch "\.") {
@@ -92,8 +93,8 @@ jobs:
             --main-jar $JAR_NAME `
             --main-class com.posadskiy.javaswingteacher.Start `
             --type exe `
-            --dest target\jpkg `
-            --temp target\jptmp `
+            --dest X:\dist\win\jpkg `
+            --temp X:\dist\win\jptmp `
             --app-version $APP_VERSION `
             --vendor Posadskiy `
             --java-options "-Dfile.encoding=UTF-8" `
@@ -107,15 +108,16 @@ jobs:
             --main-jar $JAR_NAME `
             --main-class com.posadskiy.javaswingteacher.Start `
             --type app-image `
-            --dest target\jpkg `
-            --temp target\jptmp `
+            --dest X:\dist\win\jpkg `
+            --temp X:\dist\win\jptmp `
             --app-version $APP_VERSION `
             --vendor Posadskiy `
             --java-options "-Dfile.encoding=UTF-8" `
             $ICON_ARG
-          if (Test-Path "target\jpkg\Java Swing Tutor") {
-            Compress-Archive -Path "target\jpkg\Java Swing Tutor" -DestinationPath ("target\jpkg\JavaSwingTutor-windows-app-image-" + $APP_VERSION + ".zip") -Force
+          if (Test-Path "X:\dist\win\jpkg\Java Swing Tutor") {
+            Compress-Archive -Path "X:\dist\win\jpkg\Java Swing Tutor" -DestinationPath ("X:\dist\win\jpkg\JavaSwingTutor-windows-app-image-" + $APP_VERSION + ".zip") -Force
           }
+          subst X: /d
 
       - name: Build installers and portable app image (Linux)
         if: matrix.os == 'ubuntu-latest'
@@ -164,10 +166,10 @@ jobs:
           name: desktop-${{ matrix.os }}
           path: |
             desktop-client/target/jpackage/*.dmg
-            desktop-client/target/jpkg/*.exe
             desktop-client/target/jpackage/*.deb
             desktop-client/target/jpackage/*app-image*.zip
-            desktop-client/target/jpkg/*windows-app-image*.zip
+            dist/win/jpkg/*.exe
+            dist/win/jpkg/*windows-app-image*.zip
           retention-days: 30
 
   bundle:
